revisão antes 1 envio

--- a/anotacao.org
+++ b/anotacao.org
@@ -115,9 +115,9 @@ O objetivo desta norma é "(...) contribuir para um ambiente em linha seguro, fi
 *** III - Âmbito de aplicação
 *1. Âmbito de aplicação subjetivo*. O artigo 30.º é aplicável aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes que não beneficiem da isenção prevista no artigo 29.º. Na concretização dos destinatários da norma são relevantes os conceitos de "consumidor", "comerciante", "plataforma em linha", e "contrato à distância" definidos no artigo 3.º, e para o qual se remete. O conceito de "plataformas em linha que permitem aos consumidores celebrar contratos à distância" é muito próximo do conceito de "mercado em linha"[fn:19], mas não inclui as plataformas que apenas permitem a celebração de contratos entre consumidores[cite:Cf. @wilman2024, p. 224, n.º 8; @hofmann2023, art. 30.º, n.º 8]. Assinala-se que apesar de o conceito de "comerciante" se encontrar definido no artigo 3.º, o considerando n.º 72 indica que "(...) qualquer comerciante, independentemente de ser uma pessoa singular ou coletiva, identificado como tal com base no artigo 6.º-A, n.º 1, alínea /b)/, da Diretiva 2011/83/UE e no artigo 7.º, n.º 4, alínea /f)/, da Diretiva 2005/29/CE, deverá ser rastreável quando oferece um produto ou serviço através de uma plataforma em linha."
 
-*2. Âmbito de aplicação espacial*. A obrigação imposta neste artigo aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes está limitada em função do âmbito de aplicação espacial do RSD, definido no art. 2.º, para o qual se remete. Deste modo, se o comerciante não prestar as informações mencionados no n.º 1 ou se não as corrigir ou atualizar dentro do prazo fixado no n.º 3, o fornecedor da plataforma tem o dever de, respetivamente, (i) não autorizar ou (ii) suspender a utilização da plataforma pelo comerciante para promover mensagens ou oferecer produtos ou serviços /apenas aos consumidores localizados na União Europeia/. Tal significa que nestes casos o fornecedor cumpre o artigo 30.º se recusar a autorização ou suspender a utilização da sua plataforma pelo comerciante apenas aos consumidores localizados na União Europeia, por exemplo, através do mecanismo de bloqueio geogrático, permitindo que o comerciante continue a usar a plataforma para dirigir a sua atividade aos consumidores localizados fora da União Europeia[cite:Cf., no mesmo sentido, @hofmann2023, art. 30.º, n.º 12].
+*2. Âmbito de aplicação espacial*. A obrigação imposta neste artigo aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes está limitada em função do âmbito de aplicação espacial do RSD, definido no artigo 2.º, para o qual se remete. Deste modo, se o comerciante não prestar as informações mencionados no n.º 1 ou se não as corrigir ou atualizar dentro do prazo fixado no n.º 3, o fornecedor da plataforma tem o dever de, respetivamente, (i) não autorizar ou (ii) suspender a utilização da plataforma pelo comerciante para promover mensagens ou oferecer produtos ou serviços /apenas aos consumidores localizados na União Europeia/. Tal significa que nestes casos o fornecedor cumpre o artigo 30.º se recusar a autorização ou suspender a utilização da sua plataforma pelo comerciante apenas aos consumidores localizados na União Europeia, por exemplo, através do mecanismo de bloqueio geogrático, permitindo que o comerciante continue a usar a plataforma para dirigir a sua atividade aos consumidores localizados fora da União Europeia[cite:Cf., no mesmo sentido, @hofmann2023, art. 30.º, n.º 12].
 
-*3. Âmbito de aplicação material*. A rastreabilidade dos comerciantes tem por objeto a utilização das plataformas em linha para "promover mensagens e oferecer produtos ou serviços". A promoção de mensagens pelo comerciante parece reconduzível ao conceito de "anúncio publicitário" definido no artigo 3.º, /r)/. As noções de "produtos" e "serviços" parecem ser, respetivamente, as definidas no art. 2.º/5, da Diretiva relativa a certos aspetos dos contratos de compra e venda de bens[fn:20] e no art. 4.º/1, da Diretiva serviços[fn:21]. O artigo, ao mencionar a promoção de mensagens e a oferta de produtos e serviços, /não/ abrange a conclusão do contrato[cite:Cf., neste sentido, @hofmann2023, art. 30.º, n.º 12;@muller-terpitz2023, art. 30.º, n.º 6].
+*3. Âmbito de aplicação material*. A rastreabilidade dos comerciantes tem por objeto a utilização das plataformas em linha para "promover mensagens e oferecer produtos ou serviços". A promoção de mensagens pelo comerciante parece reconduzível ao conceito de "anúncio publicitário" definido no artigo 3.º, /r)/. As noções de "produtos" e "serviços" parecem ser, respetivamente, as definidas no artigo 2.º/5, da Diretiva relativa a certos aspetos dos contratos de compra e venda de bens[fn:20] e no artigo 4.º/1, da Diretiva serviços[fn:21]. O artigo, ao mencionar a promoção de mensagens e a oferta de produtos e serviços, /não/ abrange a conclusão do contrato[cite:Cf., neste sentido, @hofmann2023, art. 30.º, n.º 12;@muller-terpitz2023, art. 30.º, n.º 6].
 
 *** IV - Recolha de informações (n.º 1)
 *4. Introdução*. Resulta do n.º 1 que os fornecedores das plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes têm a obrigação de não permitir a utilização da sua plataforma pelo comerciante para promover mensagens ou oferecer produtos e serviços aos consumidores localizados na União Europeia /antes/ de recolhida a informação elencada neste número.
@@ -140,12 +140,11 @@ A recolha de informação prevista no n.º 1 deste artigo parte do pressuposto d
 *** VI - Obrigação de avaliação prévia da informação obtida (n.º 2, 1.º parágrafo)
 *6. Regime*. Recebidas as informações elencadas no n.º 1, o fornecedor deve envidar todos os esforços para avaliar se as informações recebidas são fiáveis e completas antes de permitir a utilização da sua plataforma pelo comerciante para propor mensagens e oferecer produtos ou serviços aos consumidores localizados na União Europeia. Esta obrigação de avaliação prévia da informação obtida é uma novidade.
 
-*7. Objeto da avaliação*. O fornecedor deve avaliar se as informações são fiáveis e completas. Verificar se as informações estão ou não completas não parece suscitar dificuldades de maior[cite:Cf. @wilman2024, art. 30.º, n.º 15]. Para avaliar a fiabilidade das informações sugere-se a utilização de "bases de dados oficiais em linha e interfaces em linha de livre acesso, como registos comerciais nacionais e o Sistema de Intercâmbio de Informações sobre o IVA, ou solicitar aos comerciantes em causa que forneçam documentos comprovativos fiáveis, como cópias de documentos de identidade, extratos certificados de contas de pagamento, certificados de empresa e certidões de registo comercial", admitindo-se ainda o recurso "a outras fontes, disponíveis para utilização à distância, que proporcionem um grau de
-fiabilidade semelhante para efeitos de cumprimento desta obrigação"[fn:28]. A verificação da fiabilidade da autocertificação parece problemática, uma vez que incide sobre comportamentos futuros[cite:Cf. @wilman2024, art. 30.º, n.º 16].
+*7. Objeto da avaliação*. O fornecedor deve avaliar se as informações são fiáveis e completas. Verificar se as informações estão ou não completas não parece suscitar dificuldades de maior[cite:Cf. @wilman2024, art. 30.º, n.º 15]. Para avaliar a fiabilidade das informações sugere-se a utilização de "bases de dados oficiais em linha e interfaces em linha de livre acesso, como registos comerciais nacionais e o Sistema de Intercâmbio de Informações sobre o IVA, ou solicitar aos comerciantes em causa que forneçam documentos comprovativos fiáveis, como cópias de documentos de identidade, extratos certificados de contas de pagamento, certificados de empresa e certidões de registo comercial", admitindo-se ainda o recurso "a outras fontes, disponíveis para utilização à distância, que proporcionem um grau de fiabilidade semelhante para efeitos de cumprimento desta obrigação"[fn:28]. A verificação da fiabilidade da autocertificação parece problemática, uma vez que incide sobre comportamentos futuros[cite:Cf. @wilman2024, art. 30.º, n.º 16].
 
-O fornecedor não é obrigado a verificar a exatidão das informações recebidas. O responsável pela exatidão das informações é o comerciante (art. 30.º/2, 1.º parágrafo, /in fine/). Se, no entanto, o fornecedor tiver conhecimento de que as informações são inexatas, não deve autorizar a utilização da plataforma antes da correção das mesmas pelo comerciante[cite:Cf., neste sentido, @hofmann2023, art. 30.º, n.º 29].
+O fornecedor não é obrigado a verificar a exatidão das informações recebidas. O responsável pela exatidão das informações é o comerciante (artigo 30.º/2, 1.º parágrafo, /in fine/). Se, no entanto, o fornecedor tiver conhecimento de que as informações são inexatas, não deve autorizar a utilização da plataforma antes da correção das mesmas pelo comerciante[cite:Cf., neste sentido, @hofmann2023, art. 30.º, n.º 29].
 
-*8. Critério de diligência*. Estabelece-se que o fornecedor deve "envidar todos os esforços" para avaliar se as informações são fiáveis e completas. Esta expressão deve ser interpretada com cautela e compaginada com o esclarecimento no considerando n.º 73 de que "os fornecedores de plataformas em linha em causa não deverão ser obrigados a realizar exercícios de apuramento de factos em linha excessivos ou dispendiosos, nem a efetuar verificações desproporcionadas no local". Considera-se que o critério de diligência a adotar é o de "melhores esforços"[cite:Cf. @wilman2024, art. 30.º, n.º 13;@hofmann2023, art. 30.º, n.º 25;@muller-terpitz2023, art. 30.º, n.º 18], correspondente à versão em língua inglesa /"best efforts"/ e também ao artigo 17.º/4 da DMD. O conceito de "melhores esforços" não se encontra definido no RSD e deve ser objeto de interpretação autónoma, a qual deve atender à finalidade e objetivos do artigo 31.º e do RSD. Ainda assim, pensa-se que é possível traçar paralelos com a utilização do conceito no artigo 17.º/4 da DMD e tomar em consideração as orientações da Comissão Europeia sobre este conceito nessa sede[fn:31]. Não se visa garantir um determinado resultado, o que se compreende em face do artigo 8.º e da vontade de não impor encargos desproporcionados[fn:30]. Deve ser feita uma análise casuística, atendendo às circunstâncias do caso concreto e à complexidade da avaliação, sempre tendo em atenção o princípio da proporcionalidade. Pode questionar-se se o fornecedor empregou os seus "melhores esforços" se efetuou a sua avaliação com base num (e apenas um) dos elementos elencados no art. 30.º/2[cite:Cf. @hofmann2023, art. 30.º, n.º 26]. Atendendo à natureza casuística do conceito, a resposta afirmativa ou negativa a esta questão dependerá das circunstâncias do caso concreto.
+*8. Critério de diligência*. Estabelece-se que o fornecedor deve "envidar todos os esforços" para avaliar se as informações são fiáveis e completas. Esta expressão deve ser interpretada com cautela e compaginada com o esclarecimento no considerando n.º 73 de que "os fornecedores de plataformas em linha em causa não deverão ser obrigados a realizar exercícios de apuramento de factos em linha excessivos ou dispendiosos, nem a efetuar verificações desproporcionadas no local". Considera-se que o critério de diligência a adotar é o de "melhores esforços"[cite:Cf. @wilman2024, art. 30.º, n.º 13;@hofmann2023, art. 30.º, n.º 25;@muller-terpitz2023, art. 30.º, n.º 18], correspondente à versão em língua inglesa /"best efforts"/ e também ao artigo 17.º/4 da DMD. O conceito de "melhores esforços" não se encontra definido no RSD e deve ser objeto de interpretação autónoma, a qual deve atender à finalidade e objetivos do artigo 31.º e do RSD. Ainda assim, pensa-se que é possível traçar paralelos com a utilização do conceito no artigo 17.º/4 da DMD e tomar em consideração as orientações da Comissão Europeia sobre este conceito nessa sede[fn:31]. Não se visa garantir um determinado resultado, o que se compreende em face do artigo 8.º e da vontade de não impor encargos desproporcionados[fn:30]. Deve ser feita uma análise casuística, atendendo às circunstâncias do caso concreto e à complexidade da avaliação, sempre tendo em atenção o princípio da proporcionalidade. Pode questionar-se se o fornecedor empregou os seus "melhores esforços", se efetuou a sua avaliação com base num (e apenas um) dos elementos elencados no artigo 30.º/2[cite:Cf. @hofmann2023, art. 30.º, n.º 26]. Atendendo à natureza casuística do conceito, a resposta afirmativa ou negativa a esta questão dependerá das circunstâncias do caso concreto.
 
 *** VII - Informações inexatas, incompletas ou desatualizadas (n.º 3)
 
@@ -318,17 +317,17 @@ O meio utilizado para obter conhecimento é irrelevante. O conhecimento pode adv
 
 No contexto do artigo 32.º, em que o cumprimento da obrigação de informação pode acarretar danos reputacionais muito elevados para o comerciante, considera-se que o fornecedor deve ser cuidadoso ao estabelecer o conhecimento da ilegalidade do produto ou serviço. Por exemplo, nos casos em que é alertado para a ilegalidade de determinado produto ou serviço por notificações de terceiros, o fornecedor deverá previamente dar uma oportunidade ao comerciante para se pronunciar[cite:Cf. @hofmann2023, art. 32.º, n.ºs 13 e ss.].
 
-*b) Dados de contacto dos consumidores adquirentes do produto ou serviço ilegal*. O artigo 32.º estabelece que o fornecedor só tem a obrigação de informar os consumidor se dispuser dos seus dados de contacto, mas não o obriga a ter e tratar esses dados de contacto para este propósito[cite:@wilman2024 32.º, n.º 3, consideram que o estabelecimento de tal obrigação violaria o artigo 6.º/1 do RGPD]. O conceito de dados de contacto, não definido no RSD, abrange o endereço de correio eletrónico, o endereço postal e o número de telefone do consumidor[fn:49].
+*b) Dados de contacto dos consumidores adquirentes do produto ou serviço ilegal*. O artigo 32.º estabelece que o fornecedor só tem a obrigação de informar o consumidor se dispuser dos seus dados de contacto, mas não o obriga a ter e tratar esses dados de contacto para este propósito[cite:@wilman2024 32.º, n.º 3, consideram que o estabelecimento de tal obrigação violaria o artigo 6.º/1 do RGPD]. O conceito de dados de contacto, não definido no RSD, abrange o endereço de correio eletrónico, o endereço postal e o número de telefone do consumidor[fn:49].
 
 *6. Conteúdo*. O consumidor deve ser informado de que o produto ou serviço é ilegal (n.º 1, /a)/), da identidade do comerciante (n.º 1, /b)/) e de quaisquer meios de reparação aplicáveis (n.º 1, /c)/).
 
 *a) O facto de o produto ou serviço ser ilegal*. Da redação da al. /a)/ não resulta o dever de informar os consumidores do motivo pelo qual o produto ou serviço é ilegal. Parece haver apenas o dever de comunicar que o produto ou serviço é ilegal[cite:Cf. @muller-terpitz2023, art. 32.º, n.º 11]. Alguns autores sustentam que o dever de indicar o fundamento da ilegalidade decorre, implicitamente, da obrigação de informar o consumidor de quaiquer meios de reparação aplicáveis[cite:Cf. @hofmann2023, art. 32.º, n.º 23].
 
-*b) Identidade do comerciante*. O conceito de identidade não é definido no RSD. Alguns autores sustentam que o conceito de identidade, em regra, não abrangerá o endereço[cite:Cf. @hofmann2023, art. 32.º, n.º 25]. Outros reconduzem este conceito à informação que o fornecedor deve ter obtido do comerciante nos termos do art. 30.º/1, /a)/[cite:Cf. @muller-terpitz2023, art. 32.º, n.º 11]. Este último entendimento parece ser preferível, atendendo ao objetivo de reforçar a proteção do consumidor e à relevância do endereço postal para o exercício judicial dos direitos do consumidor.
+*b) Identidade do comerciante*. O conceito de identidade não é definido no RSD. Alguns autores sustentam que o conceito de identidade, em regra, não abrangerá o endereço[cite:Cf. @hofmann2023, art. 32.º, n.º 25]. Outros reconduzem este conceito à informação que o fornecedor deve ter obtido do comerciante nos termos do artigo 30.º/1, /a)/[cite:Cf. @muller-terpitz2023, art. 32.º, n.º 11]. Este último entendimento parece ser preferível, atendendo ao objetivo de reforçar a proteção do consumidor e à relevância do endereço postal para o exercício judicial dos direitos do consumidor.
 
 *c) Quaisquer meios de reparação aplicáveis*. As versões inglesa, francesa, italiana, espanhola e alemã do RSD indicam, respetivamente, que o consumidor deve ser informado de /"any relevant means of redress/, /"tout moyen de recours pertinent"/, /"di qualsiasi mezzo di ricorso pertinente"/, /"de cualquier vía de recurso pertinente"/ e /"die einschlägigen Rechtsbehelfe"/. A análise das várias versões linguísticas aponta no sentido de que não é suficiente uma comunicação, de caráter geral, ao consumidor sobre os seus direitos. Parece ser necessário uma adequação da informação a prestar às circunstâncias do caso concreto, considerando que o consumidor deve ser informado dos meios de reparação /pertinentes/. O RSD não dá indicações sobre esta matéria. Parece dever procurar-se um equilíbrio entre o encargo imposto aos fornecedores, que não deverá ser excessivo, e o objetivo de reforçar, através da prestação desta informação, a proteção dos consumidores. Assim, não devem ser indicados todos os direitos do consumidor, pois o excesso de informação pode dificultar o exercício dos seus direitos. Por outro lado, o fornecedor não deverá ser onerado com a obrigação de efetuar uma delimitação precisa dos meios de reparação aplicáveis. Devem ser indicados os meios de reparação que, em princípio, podem ser aplicáveis ao caso concreto[cite:Cf. @hofmann2023, art. 32.º, n.º 26;@muller-terpitz2023, art. 32.º, n.º 12].
 
-*7. Modos de prestação*. Não é definido como deve o fornecedor comunicar a informação aos consumidores. Regra geral, admite-se que a solução mais comum será o envio da informação através de mensagem para o endereço de correio eletrónico do consumidor. A informação pode também ser prestada mediante envio de carta para o endereço postal do consumidor. A prestação da informação ao consumidor mediante contacto telefónico não parece adequada, desde logo pela quantidade de informação a prestar, pelos maiores encargos que acarreta para o fornecedor[cite:Cf. @muller-terpitz2023, art. 32.º, n.º 13] e por não consubstanciar um registo duradouro que permita consultas repetidas pelo consumidor. Parece, no entanto, possível - embora não tão comum como o envio de mensagens por correio eletrónico - o envio da informação através de aplicações de troca de mensagens que utilizem o contacto telefónico para identificar os seus utilizadores (/v.g. Whatsapp/).
+*7. Modos de prestação*. Não é definido como deve o fornecedor comunicar a informação aos consumidores. Regra geral, admite-se que a solução mais comum será o envio da informação através de mensagem para o endereço de correio eletrónico do consumidor. A informação pode também ser prestada mediante envio de carta para o endereço postal do consumidor. A prestação da informação ao consumidor mediante contacto telefónico não parece adequada, desde logo pela quantidade de informação a prestar, pelos maiores encargos que acarreta para o fornecedor[cite:Cf. @muller-terpitz2023, art. 32.º, n.º 13] e por não consubstanciar um registo duradouro que permita consultas repetidas pelo consumidor. Parece, no entanto, possível - embora não tão comum como o envio de mensagens por correio eletrónico - o envio da informação através de aplicações de troca de mensagens que utilizem o contacto telefónico para identificar os seus utilizadores (/v.g., Whatsapp/).
 
 Em contraponto, a prestação da informação através da própria plataforma em linha - mesmo quando esta tenha um sistema interno de troca de mensagens - não parece poder incluir-se no conceito de dados de contacto, pois normalmente pressupõe que o consumidor tem de aceder à plataforma em linha para verificar as mensagens[cite:Cf., em sentido semelhante, @muller-terpitz2023, art. 32.º, n.º 13].
 
